--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,9 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: "1.20"
-          
+
       - name: Check out code
         uses: actions/checkout@v3
 
-      - name: Print go version
-        run: go version
-
+      - name: Run test
+        run: go test ./...
